@@ -71,6 +71,15 @@
         <div id="news">
 	    <h2 class="">News</h2>
 
+	    <h3>July 30th 2007</h3>
+   	      <b>Unstable</b> version 0.7.3 released!  New in this release:
+   	      <ul>
+   	        <li>New note synchronization feature!</li>
+   	        <li>Tasks addin and note tagging UI disabled for now; will not be part of 0.8.0.</li>
+   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_7_3/NEWS?view=markup">more</a></li>
+              </ul>
+   	      <a href="download.html">Download it</a>
+
 	    <h3>July 12th 2007</h3>
    	      <b>Unstable</b> version 0.7.2 released!  New in this release:
    	      <ul>
