@@ -1,3 +1,8 @@
+2007-08-05  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
+	* index.html: Updated for 0.7.3 release.
+	* download.html: Ditto.
+
 2007-07-12  Sandy Armstrong  <sanfordarmstrong@gmail.com>
 
 	* index.html: Updated for 0.7.2 release.
